[package]
name = "atfuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2"
rand = "0.8"
log = "0.4"
simple_logger = "4.2"
clap = { version = "4.4", features = ["derive"] }
smashquote = "0.1"
udev = "0.7"
